name:           eta-meta
version:        0.8.6.5
license:        BSD3
license-file:   LICENSE
category:       Metaprogamming
maintainer:     typeleadhq@gmail.com
bug-reports:    http://github.com/typelead/eta/issues
synopsis:       Support library for Template Metaprogramming in Eta
build-type:     Simple
cabal-version:  >= 1.10
description:
    This package provides modules containing facilities for manipulating
    Eta source code using Template Metaprogramming.

library
    default-language: Haskell2010
    other-extensions: BangPatterns
                      CPP
                      DefaultSignatures
                      DeriveDataTypeable
                      DeriveGeneric
                      ExistentialQuantification
                      FlexibleInstances
                      GADTs
                      InstanceSigs
                      RankNTypes
                      RoleAnnotations
                      ScopedTypeVariables
                      StandaloneDeriving
                      TupleSections
    exposed-modules:  Language.Eta.Meta
                      Language.Eta.Meta.Lib
                      Language.Eta.Meta.Ppr
                      Language.Eta.Meta.PprLib
                      Language.Eta.Meta.Quote
                      Language.Eta.Meta.Syntax
                      Language.Eta.Meta.LanguageExtensions
                      Language.Eta.Meta.Binary
                      Language.Eta.Meta.Server
                      Language.Eta.Meta.Lib.Map
    build-depends:    base        >= 4.7 && < 4.12,
                      binary      == 0.8.*,
                      bytestring  == 0.10.*,
                      deepseq     == 1.4.*,
                      eta-boot,
                      eta-boot-meta,
                      eta-repl,
                      pretty      == 1.1.*
    ghc-options:      -Wall -Werror
    if impl(eta)
      ghc-options:    -this-unit-id eta-meta
