name:           integer
version:        0.5.1.0
-- GHC 7.6.1 released with 0.5.0.0
license:        BSD3
license-file:   LICENSE
category:       Numerical
maintainer:     libraries@haskell.org
bug-reports:    http://ghc.haskell.org/trac/ghc/newticket?component=libraries%20%28other%29&keywords=integer-gmp
synopsis:       Integer library based on GMP
description:
    This package provides the low-level implementation of the standard
    'Integer' type based on the
    <http://gmplib.org/ GNU Multiple Precision Arithmetic Library (GMP)>.
    .
    This package provides access to the internal representation of
    'Integer' as well as primitive operations with no proper error
    handling, and should only be used directly with the utmost care.
    .
    For more details about the design of @integer-gmp@, see
    <https://ghc.haskell.org/trac/ghc/wiki/Commentary/Libraries/Integer GHC Commentary: Libraries/Integer>.
build-type:     Simple
cabal-version:  >=1.10

source-repository head
    type:     git
    location: http://git.haskell.org/ghc.git
    subdir:   libraries/integer-gmp

Library
    default-language: Haskell2010
    other-extensions:
        BangPatterns
        CPP
        GHCForeignImportPrim
        MagicHash
        NoImplicitPrelude
        UnboxedTuples
        UnliftedFFITypes

    exposed-modules:
        GHC.Integer
        GHC.Integer.BigInteger.Internals
        GHC.Integer.BigInteger.Prim
        GHC.Integer.Logarithms
        GHC.Integer.Logarithms.Internals

    other-modules:
        GHC.Integer.Type

    java-sources: java/Utils.java

    build-depends: ghc-prim == 0.4.*

    ghc-options: -this-unit-id integer