Name: eta-pkg
-- @VERSION_CHANGE@
-- @BUILD_NUMBER@
Version: 0.0.9.2
Copyright: XXX
License: BSD3
-- XXX License-File: LICENSE
Author: XXX
Maintainer: typeleadhq@gmail.com
Synopsis: A utility for querying and managing the Eta package database.
Description:
    Eta maintains a database of known packages. This tools allows tools
    and users to query and modify this database. See @eta-pkg --help@ for
    usage information.
Category: Development
build-type: Simple
cabal-version: >=1.10

Flag terminfo
    Description: Build eta-pkg with terminfo support on non-Windows platforms.
    Default: True
    Manual: False

Executable eta-pkg
    Default-Language: Haskell2010
    Main-Is: Main.hs
    Other-Extensions: CPP

    Build-Depends: base       >= 4   && < 5,
                   directory  >= 1   && < 1.4,
                   process    >= 1   && < 1.5,
                   containers,
                   filepath,
                   etlas-cabal,
                   binary,
                   eta-boot,
                   bytestring
    if !os(windows) && flag(terminfo)
        Build-Depends: terminfo
        Cpp-Options: -DWITH_TERMINFO
    if !os(windows)
        Build-Depends: unix
    if os(windows)
        c-sources: CRT_noglob.c