Name: eta-pkg
-- @VERSION_CHANGE@
-- @BUILD_NUMBER@
-- @BUILD_NUMBER_INTERNAL@
Version: 0.0.9.7
Copyright: XXX
License: BSD3
-- XXX License-File: LICENSE
Author: XXX
Maintainer: typeleadhq@gmail.com
Synopsis: A utility for querying and managing the Eta package database.
Description:
    Eta maintains a database of known packages. This tools allows tools
    and users to query and modify this database. See @eta-pkg --help@ for
    usage information.
Category: Development
build-type: Simple
cabal-version: >=1.10

Executable eta-pkg
    Default-Language: Haskell2010
    Main-Is: Main.hs

    Build-Depends: base       >= 4   && < 5,
                   directory  >= 1   && < 1.4,
                   process    >= 1   && < 1.5,
                   containers,
                   filepath,
                   etlas-cabal,
                   binary,
                   eta-boot,
                   bytestring