name: eta-pkg
-- @VERSION_CHANGE@
-- @BUILD_NUMBER@
-- @BUILD_NUMBER_INTERNAL@
version: 0.7.1.1
copyright: XXX
license: BSD3
-- XXX License-File: LICENSE
author: XXX
maintainer: typeleadhq@gmail.com
synopsis: A utility for querying and managing the Eta package database.
description:
    Eta maintains a database of known packages. This tools allows tools
    and users to query and modify this database. See @eta-pkg --help@ for
    usage information.
category: Development
build-type: Simple
cabal-version: >=1.10

executable eta-pkg
    default-language: Haskell2010
    main-is: Main.hs

    ghc-options: -Wall -fno-warn-name-shadowing -Werror

    build-depends: base       >= 4   && < 5,
                   directory  >= 1   && < 1.4,
                   containers,
                   filepath,
                   etlas-cabal,
                   binary,
                   eta-boot,
                   bytestring