name:                mapandsum
version:             0.0.0.1
description:         First sample program for GHCVM 
license:             BSD3
license-file:        LICENSE
author:              Rahul Muttineni
maintainer:          Rahul Muttineni <rahulmutt@gmail.com>
copyright:           Copyright (c) Rahul Muttineni 2016
stability:           Experimental
build-type:          Simple
cabal-version:       >=1.10

executable mapandsum
  ghc-options:         -ddump-stg -ddump-opt-cmm -ddump-to-file -O2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ghc-prim
  c-sources:           cmm/Print.cmm
  other-modules:       MinimalBase
